Manual Bank bug fixes

--- a/app/src/main/res/layout/manual_bank_verfication_sucess_failed.xml
+++ b/app/src/main/res/layout/manual_bank_verfication_sucess_failed.xml
@@ -28,7 +28,7 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="@dimen/_60sdp"
                     android:layout_marginBottom="@dimen/_21sdp"
-                    android:src="@drawable/ic_success" />
+                    android:src="@drawable/ic_success_icon" />
 
                 <TextView
                     android:id="@+id/headerTV"
