--- a/app/src/main/res/layout/activity_review_application.xml
+++ b/app/src/main/res/layout/activity_review_application.xml
@@ -889,7 +889,7 @@
                     android:textSize="@dimen/_11ssp" />
             </LinearLayout>
 
-                <LinearLayout
+            <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/backgrndallcornrs"
@@ -935,10 +935,12 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:fontFamily="@font/opensans_bold"
-                    android:text="Bank Account"
+                    android:text="Bank Account "
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_12ssp" />
+
                 <TextView
                     android:id="@+id/bankEditTV"
                     android:layout_width="wrap_content"
@@ -948,9 +950,6 @@
                     android:text="@string/edit"
                     android:textColor="@color/primary_color"
                     android:textSize="@dimen/_11ssp" />
-
-
-
             </LinearLayout>
 
             <androidx.cardview.widget.CardView
