--- a/app/src/main/res/layout/payrequestdetails.xml
+++ b/app/src/main/res/layout/payrequestdetails.xml
@@ -92,6 +92,15 @@
                             android:orientation="horizontal">
 
                             <TextView
+                                android:id="@+id/amountTV"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/opensans_bold"
+                                android:text="0.00"
+                                android:textColor="@color/primary_color"
+                                android:textSize="@dimen/_24ssp" />
+
+                            <TextView
                                 android:id="@+id/cyn"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -411,8 +420,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/_21sdp"
-                    android:layout_marginRight="@dimen/_21sdp"
                     android:layout_marginTop="@dimen/_20sdp"
+                    android:layout_marginRight="@dimen/_21sdp"
                     android:fontFamily="@font/opensans_bold"
                     android:text="Activity Log"
                     android:textColor="@color/primary_black"
