Manual Bank field validtions

--- a/app/src/main/res/layout/activity_add_manual_bank_account.xml
+++ b/app/src/main/res/layout/activity_add_manual_bank_account.xml
@@ -156,6 +156,7 @@
                             android:imeOptions="actionNext"
                             android:inputType="number"
                             android:maxLength="9"
+                            android:digits="1234567890"
                             android:maxLines="1"
                             android:padding="@dimen/_14sdp"
                             android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
@@ -216,6 +217,7 @@
                                 android:imeOptions="actionNext"
                                 android:inputType="number"
                                 android:maxLength="9"
+                                android:digits="1234567890"
                                 android:maxLines="1"
                                 android:padding="@dimen/_14sdp"
                                 android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
@@ -292,6 +294,7 @@
                             android:imeOptions="actionNext"
                             android:inputType="numberPassword"
                             android:maxLength="17"
+                            android:digits="1234567890"
                             android:maxLines="1"
                             android:padding="@dimen/_14sdp"
                             android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
@@ -353,6 +356,7 @@
                                 android:imeOptions="actionDone"
                                 android:inputType="numberPassword"
                                 android:maxLength="17"
+                                android:digits="1234567890"
                                 android:maxLines="1"
                                 android:padding="@dimen/_14sdp"
                                 android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
