--- a/app/src/main/res/layout/activity_add_manual_bank_account.xml
+++ b/app/src/main/res/layout/activity_add_manual_bank_account.xml
@@ -88,6 +88,7 @@
                             android:id="@+id/nameOnBankET"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionNext"
@@ -152,11 +153,13 @@
                             android:id="@+id/routingNumberET"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:autofillHints="AUTOFILL_HINT_SMS_OTP"
+                            android:digits="1234567890"
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionNext"
                             android:inputType="number"
+                            android:longClickable="false"
                             android:maxLength="9"
-                            android:digits="1234567890"
                             android:maxLines="1"
                             android:padding="@dimen/_14sdp"
                             android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
@@ -213,11 +216,13 @@
                                 android:id="@+id/confirmRoutingNumberET"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:autofillHints="AUTOFILL_HINT_SMS_OTP"
+                                android:digits="1234567890"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:imeOptions="actionNext"
                                 android:inputType="number"
+                                android:longClickable="false"
                                 android:maxLength="9"
-                                android:digits="1234567890"
                                 android:maxLines="1"
                                 android:padding="@dimen/_14sdp"
                                 android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
@@ -290,11 +295,12 @@
                             android:id="@+id/checkAccNumberET"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:autofillHints="AUTOFILL_HINT_SMS_OTP"
+                            android:digits="1234567890"
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionNext"
-                            android:inputType="numberPassword"
+                            android:longClickable="false"
                             android:maxLength="17"
-                            android:digits="1234567890"
                             android:maxLines="1"
                             android:padding="@dimen/_14sdp"
                             android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
@@ -352,11 +358,12 @@
                                 android:id="@+id/confirmAccNumberET"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:autofillHints="AUTOFILL_HINT_SMS_OTP"
+                                android:digits="1234567890"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:imeOptions="actionDone"
-                                android:inputType="numberPassword"
+                                android:longClickable="false"
                                 android:maxLength="17"
-                                android:digits="1234567890"
                                 android:maxLines="1"
                                 android:padding="@dimen/_14sdp"
                                 android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
