--- a/app/src/main/res/layout/activity_company_information.xml
+++ b/app/src/main/res/layout/activity_company_information.xml
@@ -119,12 +119,13 @@
                     app:errorIconDrawable="@null"
                     app:hintTextColor="@color/primary_green">
 
+<!--                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"-->
+<!--                        Company name has to accept numbers and special char also-->
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/companynameET"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:autofillHints="AUTOFILL_HINT_SMS_OTP"
-                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
                         android:inputType="text|textNoSuggestions|textCapSentences"
