--- a/app/src/main/res/layout/activity_dba_information.xml
+++ b/app/src/main/res/layout/activity_dba_information.xml
@@ -110,11 +110,13 @@
                     app:errorIconDrawable="@null"
                     app:hintTextColor="@color/primary_green">
 
+                    <!--                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"-->
+                    <!--                        DBA name has to accept numbers and special char also-->
+
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/DBAnameET"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
                         android:inputType="text|textNoSuggestions|textCapSentences"
