--- a/app/src/main/res/layout/activity_business_additional_action_required.xml
+++ b/app/src/main/res/layout/activity_business_additional_action_required.xml
@@ -9,7 +9,7 @@
         android:id="@+id/additionalActionRL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <LinearLayout
             android:id="@+id/llapprovedreserved"
@@ -122,8 +122,8 @@
                         android:id="@+id/website_revision_required"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
                         android:layout_marginBottom="@dimen/_10sdp"
+                        android:orientation="vertical"
                         android:visibility="gone">
 
                         <TextView
@@ -164,7 +164,8 @@
                         android:id="@+id/bank_information"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:visibility="visible">
 
                         <TextView
                             android:layout_width="match_parent"
@@ -416,6 +417,7 @@
                                                 android:textSize="@dimen/_11ssp" />
 
                                         </LinearLayout>
+
                                         <LinearLayout
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
@@ -436,23 +438,22 @@
                                                 android:id="@+id/errorDescrptnTV"
                                                 android:layout_width="wrap_content"
                                                 android:layout_height="wrap_content"
+                                                android:layout_marginTop="@dimen/_4sdp"
+                                                android:layout_marginBottom="@dimen/_15sdp"
                                                 android:fontFamily="@font/opensans_semibold"
                                                 android:text="[error code description]."
-                                                android:layout_marginTop="@dimen/_4sdp"
                                                 android:textColor="@color/primary_black"
-                                                android:textSize="@dimen/_11ssp"
-                                                android:layout_marginBottom="@dimen/_15sdp"/>
+                                                android:textSize="@dimen/_11ssp" />
 
                                             <TextView
                                                 android:id="@+id/resubmitTV"
                                                 android:layout_width="wrap_content"
                                                 android:layout_height="wrap_content"
+                                                android:layout_marginBottom="@dimen/_15sdp"
+                                                android:fontFamily="@font/opensans_regular"
                                                 android:text="@string/please_resubmit_a_bank_account"
                                                 android:textColor="@color/primary_green"
-                                                android:textSize="@dimen/_11ssp"
-                                                android:fontFamily="@font/opensans_regular"
-                                                android:layout_marginBottom="@dimen/_15sdp"
-                                                />
+                                                android:textSize="@dimen/_11ssp" />
 
                                         </LinearLayout>
 
@@ -535,12 +536,12 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:clickable="false"
                     android:fontFamily="@font/opensans_bold"
                     android:gravity="center"
                     android:paddingTop="@dimen/_13sdp"
                     android:paddingBottom="@dimen/_13sdp"
                     android:text="@string/submit"
-                    android:clickable="false"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_12ssp" />
             </androidx.cardview.widget.CardView>
