--- a/app/src/main/res/layout/manual_bank_verfication_sucess_failed.xml
+++ b/app/src/main/res/layout/manual_bank_verfication_sucess_failed.xml
@@ -6,10 +6,11 @@
     android:background="@color/white"
     android:orientation="vertical">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:fillViewport="true"
+        android:scrollbars="none">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -18,6 +19,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_above="@+id/validateCV"
                 android:layout_alignParentTop="true"
                 android:orientation="vertical">
 
@@ -256,5 +258,6 @@
 
 
         </RelativeLayout>
-    </LinearLayout>
+
+    </ScrollView>
 </LinearLayout>
