--- a/app/src/main/res/layout/activity_business_additional_action_required.xml
+++ b/app/src/main/res/layout/activity_business_additional_action_required.xml
@@ -210,6 +210,7 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_marginStart="@dimen/_3sdp"
+                                        android:layout_marginEnd="@dimen/_5sdp"
                                         android:layout_weight="1"
                                         android:orientation="vertical">
 
@@ -228,10 +229,9 @@
                                             android:layout_height="wrap_content"
                                             android:layout_marginTop="@dimen/_2sdp"
                                             android:fontFamily="@font/opensans_semibold"
-                                            android:text="Jonathon Smith"
+                                            android:text=""
                                             android:textColor="@color/primary_black"
                                             android:textSize="@dimen/_11ssp" />
-
 
                                     </LinearLayout>
 
@@ -239,13 +239,13 @@
                                         android:id="@+id/editTextTV"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
+                                        android:layout_marginLeft="@dimen/_10sdp"
                                         android:layout_marginTop="@dimen/_6sdp"
                                         android:layout_marginEnd="@dimen/_21sdp"
                                         android:fontFamily="@font/opensans_semibold"
                                         android:text="@string/edit_underline"
                                         android:textColor="@color/primary_green"
                                         android:textSize="@dimen/_11ssp" />
-
 
                                 </LinearLayout>
 
@@ -286,25 +286,11 @@
                                             android:layout_height="wrap_content"
                                             android:layout_marginTop="@dimen/_2sdp"
                                             android:fontFamily="@font/opensans_semibold"
-                                            android:text="123456789"
+                                            android:text=""
                                             android:textColor="@color/primary_black"
                                             android:textSize="@dimen/_11ssp" />
 
-
                                     </LinearLayout>
-
-                                    <TextView
-                                        android:id="@+id/editText1TV"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_marginTop="@dimen/_6sdp"
-                                        android:layout_marginEnd="@dimen/_21sdp"
-                                        android:fontFamily="@font/opensans_semibold"
-                                        android:text="Edit"
-                                        android:textColor="@color/primary_green"
-                                        android:textSize="@dimen/_9ssp"
-                                        android:visibility="invisible" />
-
 
                                 </LinearLayout>
 
@@ -345,25 +331,11 @@
                                             android:layout_height="wrap_content"
                                             android:layout_marginTop="@dimen/_2sdp"
                                             android:fontFamily="@font/opensans_semibold"
-                                            android:text="0001214124421"
+                                            android:text=""
                                             android:textColor="@color/primary_black"
                                             android:textSize="@dimen/_11ssp" />
 
-
                                     </LinearLayout>
-
-                                    <TextView
-                                        android:id="@+id/editText2TV"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_marginTop="@dimen/_6sdp"
-                                        android:layout_marginEnd="@dimen/_21sdp"
-                                        android:fontFamily="@font/opensans_semibold"
-                                        android:text="Edit"
-                                        android:textColor="@color/primary_green"
-                                        android:textSize="@dimen/_9ssp"
-                                        android:visibility="invisible" />
-
 
                                 </LinearLayout>
 
@@ -375,7 +347,7 @@
                                 android:layout_height="wrap_content"
                                 android:orientation="vertical"
                                 android:paddingTop="@dimen/_10sdp"
-                                android:visibility="visible">
+                                android:visibility="gone">
 
                                 <LinearLayout
                                     android:layout_width="match_parent"
@@ -463,9 +435,7 @@
 
                             </LinearLayout>
 
-
                         </LinearLayout>
-
 
                     </LinearLayout>
 
