--- a/app/src/main/res/layout/activity_edit_address.xml
+++ b/app/src/main/res/layout/activity_edit_address.xml
@@ -90,7 +90,7 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
                         android:autofillHints="AUTOFILL_HINT_SMS_OTP"
-                        android:inputType="textVisiblePassword"
+                        android:inputType="text|textNoSuggestions"
                         android:maxLength="100"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
@@ -153,7 +153,7 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
                         android:autofillHints="AUTOFILL_HINT_SMS_OTP"
-                        android:inputType="textVisiblePassword"
+                        android:inputType="text|textNoSuggestions"
                         android:maxLength="100"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
@@ -218,7 +218,7 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
                         android:autofillHints="AUTOFILL_HINT_SMS_OTP"
-                        android:inputType="textVisiblePassword|textNoSuggestions"
+                        android:inputType="text|textNoSuggestions"
                         android:maxLength="50"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
@@ -555,7 +555,7 @@
                         android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/-#&amp;(),:.;"
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
-                        android:inputType="textVisiblePassword"
+                        android:inputType="text|textNoSuggestions"
                         android:maxLength="100"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
@@ -618,7 +618,7 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                         android:imeOptions="actionNext"
-                        android:inputType="textVisiblePassword"
+                        android:inputType="text|textNoSuggestions"
                         android:maxLength="50"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
@@ -742,7 +742,7 @@
                         android:imeOptions="actionDone"
                         android:importantForAutofill="no"
                         android:hint="@string/zip"
-                        android:inputType="number|textVisiblePassword"
+                        android:inputType="number|textNoSuggestions"
                         android:maxLength="5"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
