--- a/app/src/main/res/layout/activity_edit_card.xml
+++ b/app/src/main/res/layout/activity_edit_card.xml
@@ -153,10 +153,11 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
+                            android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                             android:fontFamily="@font/opensans_semibold"
                             android:hint=""
                             android:imeOptions="actionNext"
-                            android:inputType="number"
+                            android:inputType="number|textNoSuggestions"
                             android:longClickable="false"
                             android:maxLength="5"
                             android:padding="@dimen/_14sdp"
@@ -221,11 +222,11 @@
                             android:id="@+id/etAddress1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:autofillHints="creditCardSecurityCode"
+                            android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/-#&amp;(),:.;"
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionNext"
-                            android:inputType="textVisiblePassword|textCapSentences"
+                            android:inputType="text|textCapSentences|textNoSuggestions"
                             android:maxLength="100"
                             android:maxLines="1"
                             android:padding="@dimen/_14sdp"
@@ -283,11 +284,11 @@
                             android:id="@+id/etAddress2"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:autofillHints="creditCardSecurityCode"
+                            android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/-#&amp;(),:.;"
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionNext"
-                            android:inputType="textVisiblePassword|textCapSentences"
+                            android:inputType="text|textCapSentences|textNoSuggestions"
                             android:maxLength="100"
                             android:maxLines="1"
                             android:padding="@dimen/_14sdp"
@@ -323,7 +324,7 @@
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionNext"
-                            android:inputType="textVisiblePassword|textCapSentences"
+                            android:inputType="text|textCapSentences|textNoSuggestions"
                             android:maxLength="50"
                             android:maxLines="1"
                             android:padding="@dimen/_14sdp"
