Add Manual Bank text suggestions

--- a/app/src/main/res/layout/activity_add_manual_bank_account.xml
+++ b/app/src/main/res/layout/activity_add_manual_bank_account.xml
@@ -301,7 +301,7 @@
                             android:digits="1234567890"
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionNext"
-                            android:inputType="numberPassword|textNoSuggestions"
+                            android:inputType="number|textNoSuggestions"
                             android:longClickable="false"
                             android:maxLength="17"
                             android:maxLines="1"
@@ -365,7 +365,7 @@
                                 android:digits="1234567890"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:imeOptions="actionDone"
-                                android:inputType="numberPassword|textNoSuggestions"
+                                android:inputType="number|textNoSuggestions"
                                 android:longClickable="false"
                                 android:maxLength="17"
                                 android:maxLines="1"
